--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -6,6 +6,8 @@
 {{ form.media }}
 {% endblock %}
 
+{% block title %}{% trans "Confirm E-mail Address" %} | {{ site_title|default:_('Maine-eDNA Metadata') }}{% endblock %}
+
 {% block bodyclass %}{{ block.super }} {% endblock %}
 
 {% block contentclass %}{{ block.super }}allauth_forms{% endblock %}
