--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -7,6 +7,8 @@
 {{ form.media }}
 {% endblock %}
 
+{% block title %}{% trans "Password Reset" %} | {{ site_title|default:_('Maine-eDNA Metadata') }}{% endblock %}
+
 {% block bodyclass %}{{ block.super }} {% endblock %}
 
 {% block contentclass %}{{ block.super }}allauth_forms{% endblock %}
