--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,11 +1,19 @@
 {% extends "account/base.html" %}
-
-{% load i18n %}
+{% load i18n static %}
 {% load account %}
 
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
+{{ form.media }}
+{% endblock %}
+
+{% block title %}{% trans "Password Reset" %} | {{ site_title|default:_('Maine-eDNA Metadata') }}{% endblock %}
+
+{% block bodyclass %}{{ block.super }} {% endblock %}
+
+{% block contentclass %}{{ block.super }}allauth_forms{% endblock %}
 
 {% block content %}
+<div id="content-main">
     <h1>{% trans "Password Reset" %}</h1>
     
     {% if user.is_authenticated %}
@@ -13,4 +21,5 @@
     {% endif %}
     
     <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+</div>
 {% endblock %}
