--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,9 +1,43 @@
 {% extends "account/base.html" %}
+{% load i18n static %}
+{% load crispy_forms_tags %}
 
-{% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
+{{ form.media }}
+{% endblock %}
+
+{% block title %}{% trans "Change Password" %} | {{ site_title|default:_('Maine-eDNA Metadata') }}{% endblock %}
+
+{% block bodyclass %}{{ block.super }} {% endblock %}
+
+{% block contentclass %}{{ block.super }}allauth_forms{% endblock %}
 
 {% block content %}
+    <!-- begin errors -->
+    {% if form.errors and not form.non_field_errors %}
+        <p class="errornote">
+        {% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}
+        </p>
+    {% endif %}
+    {% if form.non_field_errors %}
+        {% for error in form.non_field_errors %}
+        <p class="errornote">
+          {{ error }}
+        </p>
+        {% endfor %}
+    {% endif %}
+    <!-- end errors -->
+
+  <div id="content-main">
+    {% if user.is_authenticated %}
+      <p class="errornote">
+        {% blocktranslate trimmed %}
+          You are authenticated as {{ username }}, but are not authorized to
+          access this page. Would you like to login to a different account?
+        {% endblocktranslate %}
+      </p>
+    {% endif %}
+
     <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
 
     {% if token_fail %}
@@ -13,11 +47,12 @@
         {% if form %}
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
+                {{ form|crispy }}
+                <input class="btn btn-primary" type="submit" name="action" value="{% trans 'change password' %}"/>
             </form>
         {% else %}
             <p>{% trans 'Your password is now changed.' %}</p>
         {% endif %}
     {% endif %}
+</div>
 {% endblock %}
