--- a/templates/account/verified_email_required.html
+++ b/templates/account/verified_email_required.html
@@ -1,23 +1,32 @@
 {% extends "account/base.html" %}
+{% load i18n static %}
 
-{% load i18n %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
+{{ form.media }}
+{% endblock %}
 
-{% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
+{% block title %}{% trans "Verify Your E-mail Address" %} | {{ site_title|default:_('Maine-eDNA Metadata') }}{% endblock %}
+
+{% block bodyclass %}{{ block.super }} {% endblock %}
+
+{% block contentclass %}{{ block.super }}allauth_forms{% endblock %}
 
 {% block content %}
-<h1>{% trans "Verify Your E-mail Address" %}</h1>
+<div id="content-main">
 
-{% url 'account_email' as email_url %}
+    <h1>{% trans "Verify Your E-mail Address" %}</h1>
 
-<p>{% blocktrans %}This part of the site requires us to verify that
-you are who you claim to be. For this purpose, we require that you
-verify ownership of your e-mail address. {% endblocktrans %}</p>
+    {% url 'account_email' as email_url %}
 
-<p>{% blocktrans %}We have sent an e-mail to you for
-verification. Please click on the link inside this e-mail. Please
-contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    <p>{% blocktrans %}This part of the site requires us to verify that
+    you are who you claim to be. For this purpose, we require that you
+    verify ownership of your e-mail address. {% endblocktrans %}</p>
 
-<p>{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your e-mail address</a>.{% endblocktrans %}</p>
+    <p>{% blocktrans %}We have sent an e-mail to you for
+    verification. Please click on the link inside this e-mail. Please
+    contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
 
+    <p>{% blocktrans %}<strong>Note:</strong> you can still <a href="{{ email_url }}">change your e-mail address</a>.{% endblocktrans %}</p>
 
+</div>
 {% endblock %}
