fixed style formatting in base.html and changed email.html css to match allauth templates

--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -88,8 +88,7 @@
               {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
               {% block content_subtitle %}{% if subtitle %}<h2>{{ subtitle }}</h2>{% endif %}{% endblock %}
               {% block content %}{% endblock %}
-              {% block extra_body %}
-              {% endblock %}
+              {% block extra_body %}{% endblock %}
               <br class="clear">
             </div>
             <!-- END Content -->
