--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -1,5 +1,6 @@
 {% extends "account/base.html" %}
 {% load i18n static %}
+{% load crispy_forms_tags %}
 {% load account %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
