--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -29,7 +29,8 @@
       <!-- Header -->
       <div id="header">
         <div id="branding">
-          <h1 id="site-name"><a href="{% url '' %}">{{ site_header|default:_('Maine-eDNA Metadata') }}</a></h1>
+          <!-- temporary URL For site header; must update in prod -->
+          <h1 id="site-name"><a href="https://metadata.spatialmsk.dev">{{ site_header|default:_('Maine-eDNA Metadata') }}</a></h1>
         </div>
         <!-- begin usertools -->
         {% block usertools %}
