--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -37,7 +37,7 @@
         <div id="user-tools">
           {% block userlinks %}
             {% if user.is_active and user.is_staff %}
-              <a href="{% url 'admin:index' %}">{% translate 'Admin page' %}</a> /
+              <a href="{% url 'admin:index' %}">{% translate 'Admin page' %}</a> |
             {% endif %}
             {% if user.is_authenticated %}
               <a href="{% url 'account_email' %}">Change E-mail</a> |
