added / to site-name href

--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -30,7 +30,7 @@
       <div id="header">
         <div id="branding">
           <!-- temporary URL For site header; must update in prod -->
-          <h1 id="site-name"><a href="https://metadata.spatialmsk.dev">{{ site_header|default:_('Maine-eDNA Metadata') }}</a></h1>
+          <h1 id="site-name"><a href="https://metadata.spatialmsk.dev/">{{ site_header|default:_('Maine-eDNA Metadata') }}</a></h1>
         </div>
         <!-- begin usertools -->
         {% block usertools %}
