removed signup links from base and login forms

--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -43,8 +43,7 @@
               <a href="{% url 'account_email' %}">Change E-mail</a> |
               <a href="{% url 'account_logout' %}">Sign Out</a>
             {% else %}
-              <a href="{% url 'account_login' %}">Sign In</a> |
-              <a href="{% url 'account_signup' %}">Sign Up</a>
+              <a href="{% url 'account_login' %}">Sign In</a>
             {% endif %}
             {% endblock %}
         </div>
