--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -33,7 +33,7 @@
     <h1>{% trans "Sign In" %}</h1>
 
     <p>{% blocktrans %}If you have not created an account yet, then please
-    <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+    <a href="mailto: mednametadata@gmail.com">email a request</a> first.{% endblocktrans %}</p>
 
     <form class="login" method="POST" action="{% url 'account_login' %}">
       {% csrf_token %}
