--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -42,6 +42,8 @@
             {% if user.is_authenticated and not user.is_expired %}
               <a href="{% url 'account_email' %}">Change E-mail</a> |
               <a href="{% url 'account_logout' %}">Sign Out</a>
+            {% elif user.is_expired %}
+              <a href="{% url 'account_logout' %}">Sign Out</a>
             {% else %}
               <a href="{% url 'account_login' %}">Sign In</a>
             {% endif %}
