--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,6 +1,7 @@
 {% extends "account/base.html" %}
 {% load i18n static %}
 {% load crispy_forms_tags %}
+{% load account %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
 {{ form.media }}
@@ -32,7 +33,7 @@
     {% if user.is_expired %}
       <p class="errornote">
       {% blocktranslate trimmed %}
-          You are authenticated as {{ username }}, but your account is currently
+          You are authenticated as {{ user_display }}, but your account is currently
           inactive. Logout to to login to a different account.
       {% endblocktranslate %}
       </p>
