--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,7 +1,6 @@
 {% extends "account/base.html" %}
 {% load i18n static %}
 {% load crispy_forms_tags %}
-{% load account %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
 {{ form.media }}
@@ -33,8 +32,9 @@
     {% if user.is_expired %}
       <p class="errornote">
       {% blocktranslate trimmed %}
-          You are authenticated as {{ user_display }}, but your account is currently
-          inactive. Logout to to login to a different account.
+          You are authenticated, but your account is currently
+          inactive. Sign out to to sign in to a different account or
+          contact <a href="mailto: mednametadata@gmail.com">Maine-eDNA admininstrators</a> to reactivate your account.
       {% endblocktranslate %}
       </p>
     {% endif %}
