rename region model to watershed

--- a/field_sites/templates/field_sites/site.html
+++ b/field_sites/templates/field_sites/site.html
@@ -44,9 +44,9 @@
           </li>
           {% endfor %}
         </ul>
-        <h3>{{ filter.form.region.label_tag }}</h3>
-        <ul class="user-filter-region">
-            {% for choice in filter.form.region %}
+        <h3>{{ filter.form.watershed.label_tag }}</h3>
+        <ul class="user-filter-watershed">
+            {% for choice in filter.form.watershed %}
           <li>
             <label class="checkbox-inline">
               {{ choice.tag }} {{ choice.choice_label }}
