--- a/field_sites/templates/field_sites/site_detail.html
+++ b/field_sites/templates/field_sites/site_detail.html
@@ -16,8 +16,8 @@
               <td>{{ site.system }}</td>
           </tr>
           <tr>
-              <th>{% translate 'Region:' %}</th>
-              <td>{{ site.region }}</td>
+              <th>{% translate 'Watershed:' %}</th>
+              <td>{{ site.watershed }}</td>
           </tr>
           <tr>
               <th>{% translate 'General Location Name:' %}</th>
