Added type=text/css to style in templates

--- a/frontend/templates/home/django-material-kit/ui-catchers-modals.html
+++ b/frontend/templates/home/django-material-kit/ui-catchers-modals.html
@@ -27,14 +27,14 @@
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
-  <link href="/static/assets/css/django-material-kit/nucleo-icons.css" rel="stylesheet" />
-  <link href="/static/assets/css/django-material-kit/nucleo-svg.css" rel="stylesheet" />
+  <link href="/static/assets/css/django-material-kit/nucleo-icons.css" type="text/css" rel="stylesheet" />
+  <link href="/static/assets/css/django-material-kit/nucleo-svg.css" type="text/css" rel="stylesheet" />
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" href="/static/assets/css/django-material-kit/material-kit.css?v=3.0.0" rel="stylesheet" />
+  <link id="pagestyle" href="/static/assets/css/django-material-kit/material-kit.css?v=3.0.0" type="text/css" rel="stylesheet" />
 </head>
 
 <body class="modals-sections">
