updated css in html

--- a/frontend/templates/home/django-material-kit/ui-catchers-modals.html
+++ b/frontend/templates/home/django-material-kit/ui-catchers-modals.html
@@ -35,7 +35,7 @@
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/material-kit.css?v=3.0.0' %}">
+  <link id="pagestyle" rel="stylesheet" type="text/css" href="{% static 'assets/css/django-material-kit/material-kit.css' %}">
 </head>
 
 <body class="modals-sections">
