updated js load from static in frontend

--- a/frontend/templates/home/django-material-kit/ui-catchers-modals.html
+++ b/frontend/templates/home/django-material-kit/ui-catchers-modals.html
@@ -116,7 +116,7 @@
   </div>
 </div>
 
-        <script src="/static/assets/js/django-material-kit/core/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
         '></iframe>
             </div>
             <div class="tab-pane" id="code-alert-dismiss">
