--- a/frontend/templates/home/django-material-kit/ui-elements-badges.html
+++ b/frontend/templates/home/django-material-kit/ui-elements-badges.html
@@ -103,8 +103,8 @@
   </div>
 </section>
 
-        <script src="/static/assets/js/django-material-kit/core/popper.min.js" type="text/javascript"></script>
-        <script src="/static/assets/js/django-material-kit/core/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
         '></iframe>
             </div>
             <div class="tab-pane" id="code-badges">
@@ -180,8 +180,8 @@
   </div>
 </section>
 
-        <script src="/static/assets/js/django-material-kit/core/popper.min.js" type="text/javascript"></script>
-        <script src="/static/assets/js/django-material-kit/core/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
         '></iframe>
             </div>
             <div class="tab-pane" id="code-badges-simple">
@@ -257,8 +257,8 @@
   </div>
 </section>
 
-        <script src="/static/assets/js/django-material-kit/core/popper.min.js" type="text/javascript"></script>
-        <script src="/static/assets/js/django-material-kit/core/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
         '></iframe>
             </div>
             <div class="tab-pane" id="code-badges-simple-rounded">
