--- a/frontend/templates/home/django-material-kit/ui-elements-dropdowns.html
+++ b/frontend/templates/home/django-material-kit/ui-elements-dropdowns.html
@@ -135,8 +135,8 @@
 </div>
 <!--   end dropdowns & dropups -->
 
-        <script src="/static/assets/js/django-material-kit/core/popper.min.js" type="text/javascript"></script>
-        <script src="/static/assets/js/django-material-kit/core/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
         <link id="pagestyle" href="https://demos.creative-tim.com/material-kit/assets/css/material-kit.min.css?v=3.0.0" rel="stylesheet" />
 
         '></iframe>
