--- a/frontend/templates/home/django-material-kit/ui-navigation-nav-tabs.html
+++ b/frontend/templates/home/django-material-kit/ui-navigation-nav-tabs.html
@@ -106,8 +106,8 @@
  </div>
 </section>
 
-        <script src="/static/assets/js/django-material-kit/core/popper.min.js" type="text/javascript"></script>
-        <script src="/static/assets/js/django-material-kit/core/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.0" type="text/javascript"></script>
         '></iframe>
             </div>
