--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -1297,23 +1297,23 @@
   </footer>
 
   <!--   Core JS Files   -->
-  <script src="/static/assets/js/django-material-kit/core/popper.min.js" type="text/javascript"></script>
-  <script src="/static/assets/js/django-material-kit/core/bootstrap.min.js" type="text/javascript"></script>
-  <script src="/static/assets/js/django-material-kit/plugins/perfect-scrollbar.min.js"></script>
+  <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'assets/js/django-material-kit/plugins/perfect-scrollbar.min.js' %}"></script>
   <!--  Plugin for TypedJS, full documentation here: https://github.com/inorganik/CountUp.js -->
-  <script src="/static/assets/js/django-material-kit/plugins/countup.min.js"></script>
+  <script src="{% static 'assets/js/django-material-kit/plugins/countup.min.js' %}"></script>
   <!--  Plugin for Parallax, full documentation here: https://github.com/dixonandmoe/rellax -->
-  <script src="/static/assets/js/django-material-kit/plugins/rellax.min.js"></script>
+  <script src="{% static 'assets/js/django-material-kit/plugins/rellax.min.js' %}"></script>
   <!--  Plugin for TiltJS, full documentation here: https://gijsroge.github.io/tilt.js/ -->
-  <script src="/static/assets/js/django-material-kit/plugins/tilt.min.js"></script>
+  <script src="{% static 'assets/js/django-material-kit/plugins/tilt.min.js' %}"></script>
   <!--  Plugin for Selectpicker - ChoicesJS, full documentation here: https://github.com/jshjohnson/Choices -->
-  <script src="/static/assets/js/django-material-kit/plugins/choices.min.js"></script>
+  <script src="{% static 'assets/js/django-material-kit/plugins/choices.min.js' %}"></script>
   <!--  Plugin for Parallax, full documentation here: https://github.com/wagerfield/parallax  -->
-  <script src="/static/assets/js/django-material-kit/plugins/parallax.min.js"></script>
+  <script src="{% static 'assets/js/django-material-kit/plugins/parallax.min.js' %}"></script>
   <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
-  <script src="/static/assets/js/django-material-kit/material-kit.min.js?v=3.0.0" type="text/javascript"></script>
+  <script src="{% static 'assets/js/django-material-kit/material-kit.min.js' %}" type="text/javascript"></script>
   <script type="text/javascript">
     if (document.getElementById('state1')) {
       const countUp = new CountUp('state1', document.getElementById("state1").getAttribute("countTo"));
