--- a/frontend/templates/home/django-material-kit/ui-catchers-tooltips-popovers.html
+++ b/frontend/templates/home/django-material-kit/ui-catchers-tooltips-popovers.html
@@ -106,8 +106,8 @@
   </div>
 </div>
 
-        <script src="/static/assets/js/django-material-kit/core/popper.min.js" type="text/javascript"></script>
-        <script src="/static/assets/js/django-material-kit/core/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
         <script>var popoverTriggerList = [].slice.call(document.querySelectorAll(&#39;[data-bs-toggle="popover"]&#39;))
         var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
           return new bootstrap.Popover(popoverTriggerEl)
@@ -200,8 +200,8 @@
   </div>
 </div>
 
-        <script src="/static/assets/js/django-material-kit/core/popper.min.js" type="text/javascript"></script>
-        <script src="/static/assets/js/django-material-kit/core/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
         <script>
           var tooltipTriggerList = [].slice.call(document.querySelectorAll(&#39;[data-bs-toggle="tooltip"]&#39;))
         var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
