--- a/frontend/templates/home/django-material-kit/ui-elements-avatars.html
+++ b/frontend/templates/home/django-material-kit/ui-elements-avatars.html
@@ -107,8 +107,8 @@
   </div>
 </div>
 
-        <script src="/static/assets/js/django-material-kit/core/popper.min.js" type="text/javascript"></script>
-        <script src="/static/assets/js/django-material-kit/core/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
         <script>
           var tooltipTriggerList = [].slice.call(document.querySelectorAll(&#39;[data-bs-toggle="tooltip"]&#39;))
         var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
