--- a/frontend/templates/home/django-material-kit/ui-navigation-navbars.html
+++ b/frontend/templates/home/django-material-kit/ui-navigation-navbars.html
@@ -143,8 +143,8 @@
 <!-- End Navbar -->
 
 
-        <script src="/static/assets/js/django-material-kit/core/popper.min.js" type="text/javascript"></script>
-        <script src="/static/assets/js/django-material-kit/core/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
         '></iframe>
             </div>
             <div class="tab-pane" id="code-navbar-dark">
