--- a/frontend/templates/home/django-material-kit/ui-navigation-pagination.html
+++ b/frontend/templates/home/django-material-kit/ui-navigation-pagination.html
@@ -122,8 +122,8 @@
   </div>
 </section>
 
-        <script src="/static/assets/js/django-material-kit/core/popper.min.js" type="text/javascript"></script>
-        <script src="/static/assets/js/django-material-kit/core/bootstrap.min.js" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
+        <script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
         '></iframe>
             </div>
             <div class="tab-pane" id="code-pagination-simple">
