--- a/frontend/templates/includes/django-material-kit/scripts.html
+++ b/frontend/templates/includes/django-material-kit/scripts.html
@@ -1,23 +1,24 @@
+{% load static %}
 <!--   Core JS Files   -->
-<script src="/static/assets/js/django-material-kit/core/popper.min.js" type="text/javascript"></script>
-<script src="/static/assets/js/django-material-kit/core/bootstrap.min.js" type="text/javascript"></script>
-<script src="/static/assets/js/django-material-kit/plugins/perfect-scrollbar.min.js"></script>
+<script src="{% static 'assets/js/django-material-kit/core/popper.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'assets/js/django-material-kit/core/bootstrap.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'assets/js/django-material-kit/plugins/perfect-scrollbar.min.js' %}"></script>
 
 <!--  Plugin for TypedJS, full documentation here: https://github.com/inorganik/CountUp.js -->
-<script src="/static/assets/js/django-material-kit/plugins/countup.min.js"></script>
-<script src="/static/assets/js/django-material-kit/plugins/choices.min.js"></script>
+<script src="{% static 'assets/js/django-material-kit/plugins/countup.min.js' %}"></script>
+<script src="{% static 'assets/js/django-material-kit/plugins/choices.min.js' %}"></script>
 <script src="/static/assets/js/django-material-kit/plugins/prism.min.js"></script>
 <script src="/static/assets/js/django-material-kit/plugins/highlight.min.js"></script>
 
 <!--  Plugin for Parallax, full documentation here: https://github.com/dixonandmoe/rellax -->
-<script src="/static/assets/js/django-material-kit/plugins/rellax.min.js"></script>
+<script src="{% static 'assets/js/django-material-kit/plugins/rellax.min.js' %}"></script>
 <!--  Plugin for TiltJS, full documentation here: https://gijsroge.github.io/tilt.js/ -->
-<script src="/static/assets/js/django-material-kit/plugins/tilt.min.js"></script>
+<script src="{% static 'assets/js/django-material-kit/plugins/tilt.min.js' %}"></script>
 <!--  Plugin for Selectpicker - ChoicesJS, full documentation here: https://github.com/jshjohnson/Choices -->
-<script src="/static/assets/js/django-material-kit/plugins/choices.min.js"></script>
+<script src="{% static 'assets/js/django-material-kit/plugins/choices.min.js' %}"></script>
 
 <!--  Plugin for Parallax, full documentation here: https://github.com/wagerfield/parallax  -->
-<script src="/static/assets/js/django-material-kit/plugins/parallax.min.js"></script>
+<script src="{% static 'assets/js/django-material-kit/plugins/parallax.min.js' %}"></script>
 
 <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
-<script src="/static/assets/js/django-material-kit/material-kit.min.js?v=3.0.0" type="text/javascript"></script>
+<script src="{% static 'assets/js/django-material-kit/material-kit.min.js' %}" type="text/javascript"></script>
